--- a/templates/pages/seal_page.html
+++ b/templates/pages/seal_page.html
@@ -19,5 +19,6 @@
 
 {% block content %}
     <h1>{{ page }}</h1>
+    <img src="{{ page.image.url }}" width="150">
     {{ page.text }}
 {% endblock %}
