bugfix: path to poi-api was localhost

--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,7 @@
                 strategies : [ new OpenLayers.Strategy.BBOX( {resFactor: 1.1} ) ],
                 protocol: new OpenLayers.Protocol.HTTP(
                     {
-                        url : "http://localhost:8000/poi/get/layer/lebensmittel",
+                        url : "/poi/get/layer/lebensmittel",
                         format : new OpenLayers.Format.Text()
                     }
                 )
@@ -25,7 +25,7 @@
                 strategies : [ new OpenLayers.Strategy.BBOX( {resFactor: 1.1} ) ],
                 protocol : new OpenLayers.Protocol.HTTP(
                     {
-                        url : "http://localhost:8000/poi/get/layer/textilien",
+                        url : "/poi/get/layer/textilien",
                         format: new OpenLayers.Format.Text()
                     }
                 )
@@ -36,7 +36,7 @@
                 strategies : [ new OpenLayers.Strategy.BBOX( {resFactor: 1.1} ) ],
                 protocol : new OpenLayers.Protocol.HTTP(
                     {
-                        url : "http://localhost:8000/poi/get/layer/papier_holz",
+                        url : "/poi/get/layer/papier_holz",
                         format: new OpenLayers.Format.Text()
                     }
                 )
@@ -47,7 +47,7 @@
                 strategies : [ new OpenLayers.Strategy.BBOX( {resFactor: 1.1} ) ],
                 protocol : new OpenLayers.Protocol.HTTP(
                     {
-                        url : "http://localhost:8000/poi/get/layer/kosmetik",
+                        url : "/poi/get/layer/kosmetik",
                         format: new OpenLayers.Format.Text()
                     }
                 )
@@ -58,7 +58,7 @@
                 strategies : [ new OpenLayers.Strategy.BBOX( {resFactor: 1.1} ) ],
                 protocol : new OpenLayers.Protocol.HTTP(
                     {
-                        url : "http://localhost:8000/poi/get/layer/mobilitaet",
+                        url : "/poi/get/layer/mobilitaet",
                         format: new OpenLayers.Format.Text()
                     }
                 )
@@ -69,7 +69,7 @@
                 strategies : [ new OpenLayers.Strategy.BBOX( {resFactor: 1.1} ) ],
                 protocol : new OpenLayers.Protocol.HTTP(
                     {
-                        url : "http://localhost:8000/poi/get/layer/sonstiges",
+                        url : "/poi/get/layer/sonstiges",
                         format: new OpenLayers.Format.Text()
                     }
                 )
