--- a/templates/auth/edit_poi.html
+++ b/templates/auth/edit_poi.html
@@ -2,7 +2,7 @@
 
 
 {% block content %}
-    <form action="/poi/edit" method="post">
+    <form action="/poi/edit/{{ poi.id }}" method="post">
     {% csrf_token %}
         <table>
             {{ form.as_table }}
