--- a/templates/base.html
+++ b/templates/base.html
@@ -18,12 +18,8 @@
         
         <script type="text/javascript" src="/static/js/function.js"></script>
         <script type="text/javascript" src="http://www.openlayers.org/dev/OpenLayers.js"></script>
-<!--
-        <script type="text/javascript" src="static/js/jquery-1.4.4.min.js"></script>
-        <script type="text/javascript" src="static/js/oem_mini.js"></script>
-        <script type="text/javascript" src="static/js/utility.js"></script>
-        <script type="text/javascript" src="static/js/OpenLayers.js"></script>
--->
+        <script type="text/javascript" src="/static/js/map.js"></script>
+        
         <script type="text/javascript">
             {% block java_script %}
             
