--- a/templates/pages/overview.html
+++ b/templates/pages/overview.html
@@ -32,7 +32,7 @@
                 <li class="title">
                     {% ifequal overview 'flyer' %}
                     <a href="">
-                        {{ page.group.name }}
+                        {{ page.user.group_name }}
                     </a>
                     {% else %}
                     <a href="/pages/filter/{{ selected.id }}/{{ page.id }}">
