--- a/templates/pages/details_page.html
+++ b/templates/pages/details_page.html
@@ -8,7 +8,7 @@
     <li>
         <span>
             {% ifequal details 'flyer' %}
-            Kategorie >> Flyer : {{ selected }} >> {{ page.group }}
+            Kategorie >> Flyer : {{ selected }} >> {{ page.user.group_name }}
             {% else %}
             Kategorie >> Siegel : {{ selected }} >> {{ page }}
             {% endifequal %}
