--- a/templates/templatetags/tabmenu_for_flyer_page.html
+++ b/templates/templatetags/tabmenu_for_flyer_page.html
@@ -1,7 +1,7 @@
 {% for page in pages %}
     <li>
         <a href="/pages/category/{{ page.category.id }}/{{ page.id }}"{% ifequal selected_page_id page.id %} class="active"{% endifequal %}>
-            {{ page.group.name }}
+            {{ page.user.group_name }}
         </a>
     </li>
 {% endfor %}
