--- a/templates/poi_form.html
+++ b/templates/poi_form.html
@@ -1,6 +1,6 @@
 <html>
     <body>
-        <form action="" method="POST">
+        <form action="/poi/add" method="POST">
             {% csrf_token %}
             <table>
                 {{ form.as_table }}
