bugfix in add_poi (seals and filter) / addad add_poi form, but link is buggy

--- a/templates/home.html
+++ b/templates/home.html
@@ -2,5 +2,9 @@
 
 
 {% block main_content %}
-    <div id="map" class="smallmap"></div>
+            <div id="AddPOIFrame" class="PoiAddDiv">
+                Eintrag hinzufügen
+                <div id="POIHideDiv" class="POIFrameHide">X</div>
+            </div>
+            <div id="map" class="smallmap"></div>
 {% endblock %}
