--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,10 @@
         <script type="text/javascript" src="http://www.openlayers.org/dev/OpenLayers.js"></script>
         <script type="text/javascript" src="/static/js/map.js"></script>
         <script type="text/javascript" src="/static/js/function.js"></script>
+        
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+        <script type="text/javascript" src="/static/js/add_poi.js"></script>
+        <link href="/static/css/add_poi.css" rel="stylesheet" type="text/css">
     </head>
     
     <body{% if home %} onload="init()"{% endif %}>
@@ -47,9 +51,7 @@
         </header>
         
         <div id="main_content">
-            {% block main_content %}
-            maincontent
-            {% endblock %}
+            {% block main_content %} maincontent {% endblock %}
         </div>
     </body>
 </html>
