added oem user admin / init method for categories and so on / about-page

--- a/templates/about.html
+++ b/templates/about.html
@@ -7,6 +7,63 @@
     {% show_tabmenu_for_infopage 'about' %}
     
     <div id="content">
-        about
+        <h1>Was ist OpenEcoMaps?</h1>
+        
+        <p>Stell dir vor, du ziehst neu in eine Stadt! Häufig kennt man
+        zu diesem Zeitpunkt nur sehr wenig bis gar nichts dort. Aber wo finde ich einen Bioladen?
+        Wo bekomme ich Recycling-Papier oder mit dem FSC-Siegel zertifiziertes
+        Holz her? Oder wo gibt es Fisch zu kaufen, der
+        nicht schon überfischt ist und damit noch vertretbar ist zu essen? Auf die erste Frage haben
+        Plattformen wie Google-Maps schnell eine Antwort parat. Bei den
+        nachfolgenden wird es schon schwieriger. Und aus diesem Grunde gibt es
+        OpenEcoMaps.</p>
+        
+        <p>OpenEcoMaps ist insofern frei, als dass jeder User sogenannte POI's (Point of Interest)
+        auf der Karte eintragen kann. Diese werden von einer Greepeace-Ortsgruppe,
+        sofern es eine in der Nähe gibt und diese die nötigen Kapazitäten hat, geprüft
+        und verifiziert. Des Weiteren kann diese Ortgruppe einen regionalen
+        Ratgeber, sofern sie einen hat, zum Download anbieten. Dort sind dann
+        alles Gewerbe zu einem bestimmten Thema zusammengefasst.</p>
+        
+        <h1>ToDo's</h1>
+        <ul>
+            <li>Suche von Städten über das Suche-Feld</li>
+            <li>bei erneutem Besuch der Seite den Karten-Fokus wieder in "meiner" Stadt</li>
+            <li>Bread-Crumes Pfad</li>
+            <li>Haupt-Menü als aufklappbares Menü mit den verschiedenen Städten in der jeweiligen Kategorie</li>
+            <li>Export der POI's einer Stadt samt Kartenausschnitt in ein PDF</li>
+            <li>Import einer comma-separated Datei für POI's</li>
+            <li>Kartengröße an Fenstergröße anpassen</li>
+            <li>Smartphone-App</li>
+        </ul>
+        
+        <h1>Projekt-Team</h1>
+        <table>
+            <tr><th>Tätigkeit</th><th>Name</th></tr>
+            <tr>
+                <td>Projektleiter</td>
+                <td>Stefan Bunde (Potsdam)</td>
+            </tr>
+            <tr>
+                <td>stellv. Projektleiter</td>
+                <td>Konstantin (Bonn)</td>
+            </tr>
+            <tr>
+                <td>Design</td>
+                <td>Amos (Dresden)</td>
+            </tr>
+            <tr>
+                <td>Entwicklung Backend</td>
+                <td>Stefan Bunde (Potsdam)</td>
+            </tr>
+            <tr>
+                <td>Entwicklung Frontend</td>
+                <td>Jens (Düsseldorf), Martin (Würzburg)</td>
+            </tr>
+            <tr>
+                <td>Redaktion</td>
+                <td>Annika (Düsseldorf), Frederik (Jena), Jana (Leipzig), Konstantin (Bonn)</td>
+            </tr>
+        </table>
     </div>
 {% endblock %}
