--- a/templates/auth/auth.html
+++ b/templates/auth/auth.html
@@ -30,7 +30,7 @@
             {% endblock %}
         </div>
     {% else %}
-        <center>
+        <div id="content">
             {% if form.errors %}
                 <p>Your username and password didn't match. Please try again.</p>
             {% endif %}
@@ -49,6 +49,6 @@
                     </tr>
                 </table>
             </form>
-        </center>
+        </div>
     {% endif %}
 {% endblock %}
