--- a/static_files/css/reset.css
+++ b/static_files/css/reset.css
@@ -87,7 +87,7 @@ body, select, input, textarea {
 h1,h2,h3,h4,h5,h6 { font-weight: bold; }
 
 /* always force a scrollbar in non-IE */ 
-html { overflow-y: scroll; }
+/*html { overflow-y: scroll; }*/
 
  
 /* Accessible focus treatment: people.opera.com/patrickl/experiments/keyboard/test */
