--- a/templates/poi_form.html
+++ b/templates/poi_form.html
@@ -10,15 +10,10 @@
                 <p>Vielen Dank, dass du uns hilfst, weitere Orte in unser Verzeichnis aufzunehmen. Bitte fülle die Felder aus und klicke auf "hinzufügen".</p>
             </legend>
             {% csrf_token %}
-            <table>
-                {{ form.as_table }}
-                <tr>
-                    <td></td>
-                    <td>
-                        <input type="submit" value="hinzufügen" class="submitBtn">
-                    </td>
-                </tr>
-            </table>
+            <ul class="formUL">
+                {{ form.as_ul }}
+                <input type="submit" value="hinzufügen" class="submitBtn">
+            </ul>
         <form>
     </body>
 </html>
