--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,7 @@
         <script type="text/javascript" src="/static/lib/OpenLayers/OpenLayers.js"></script>
         <script type="text/javascript" src="/static/js/map.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+        <script type="text/javascript" src="/static/js/jquery.getUrlParam.js"></script>
         <script type="text/javascript" src="/static/js/function.js"></script>
         
         <script type="text/javascript" src="/static/js/add_poi.js"></script>
