--- a/templates/pages/pages.html
+++ b/templates/pages/pages.html
@@ -11,7 +11,7 @@
                 </a>
             </li>
             <li class="tabButton">
-                <a href="/pages/filter"{% ifequal view 'filter' %} class="active"{% endifequal %}>
+                <a href="/pages/seals"{% ifequal view 'seals' %} class="active"{% endifequal %}>
                     Siegelansicht
                 </a>
             </li>
