change settings (password)

--- a/templates/about.html
+++ b/templates/about.html
@@ -9,21 +9,23 @@
     <div id="content">
         <h1>Was ist OpenEcoMaps?</h1>
         
-        <p>Stell dir vor, du ziehst neu in eine Stadt! Häufig kennt man
-        zu diesem Zeitpunkt nur sehr wenig bis gar nichts dort. Aber wo finde ich einen Bioladen?
-        Wo bekomme ich Recycling-Papier oder mit dem FSC-Siegel zertifiziertes
-        Holz her? Oder wo gibt es Fisch zu kaufen, der
-        nicht schon überfischt ist und damit noch vertretbar ist zu essen? Auf die erste Frage haben
+        <p>Bedingt durch Studium oder Arbeit ziehen Menschen häufig um in eine
+        andere Stadt. In der Regel kennen sie dann nur sehr wenig bis gar
+        nichts dort. Wo befindet sich der nächste Bioladen?
+        Wo gibt es Recycling-Papier oder mit dem FSC-Siegel zertifiziertes
+        Holz? Oder wo kann Fisch gekauft werden, der nicht schon überfischt ist?
+        Auf die erste Frage haben
         Plattformen wie Google-Maps schnell eine Antwort parat. Bei den
         nachfolgenden wird es schon schwieriger. Und aus diesem Grunde gibt es
         OpenEcoMaps.</p>
-        
-        <p>OpenEcoMaps ist insofern frei, als dass jeder User sogenannte POI's (Point of Interest)
+        <br>
+        <p>OpenEcoMaps ist insofern open (frei), als dass jeder User
+        sogenannte POI's (Point of Interest)
         auf der Karte eintragen kann. Diese werden von einer Greepeace-Ortsgruppe,
         sofern es eine in der Nähe gibt und diese die nötigen Kapazitäten hat, geprüft
         und verifiziert. Des Weiteren kann diese Ortgruppe einen regionalen
         Ratgeber, sofern sie einen hat, zum Download anbieten. Dort sind dann
-        alles Gewerbe zu einem bestimmten Thema zusammengefasst.</p>
+        alle Gewerbe zu einem bestimmten Thema zusammengefasst.</p>
         
         <h1>ToDo's</h1>
         <ul>
