--- a/templates/auth/settings.html
+++ b/templates/auth/settings.html
@@ -1,14 +1,14 @@
 {% extends "auth/auth.html" %}
 
 {% block content %}
-    settings
     <form action="/settings" method="post">
+        {% csrf_token %}
         <table>
             {{ form.as_table }}
             <tr>
                 <td></td>
                 <td>
-                    <input type="button" value="OK">
+                    <input type="submit" value="OK">
                 </td>
             </tr>
         </table>
