bugfix: repaired broken paths

--- a/templates/auth/auth.html
+++ b/templates/auth/auth.html
@@ -17,7 +17,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/settings"{% ifequal selected_page 'settings_overview' %} class="active"{% endifequal %}>
+                    <a href="/overview/settings"{% ifequal selected_page 'settings_overview' %} class="active"{% endifequal %}>
                         Settings
                     </a>
                 </li>
