dummy data in json file for later testing

--- a/templates/about.html
+++ b/templates/about.html
@@ -28,12 +28,30 @@
         alle Gewerbe zu einem bestimmten Thema zusammengefasst.</p>
         
         <h1>ToDo's</h1>
+        
+        <h3>Map:</h3>
         <ul>
             <li>bei erneutem Besuch der Seite den Karten-Fokus wieder in "meiner" Stadt</li>
-            <li>Bread-Crumes Pfad</li>
-            <li>Haupt-Menü als aufklappbares Menü mit den verschiedenen Städten in der jeweiligen Kategorie</li>
+            <li>nach Hinzufügen von POIs wieder zum Eingabe-Formular zurückkehren</li>
+            <li>sollten mehrere mögliche POIs gefunden werden, muss der User auswählen</li>
+            <li>Fehler, wenn beim Hinzufügen kein POI gefunden</li>
+        </ul>
+        
+        <h3>Interner Bereich:</h3>
+        <ul>
             <li>Export der POI's einer Stadt samt Kartenausschnitt in ein PDF</li>
             <li>Import einer comma-separated Datei für POI's</li>
+        </ul>
+        
+        <h3>Navigation:</h3>
+        <ul>
+            <li>Bread-Crumes Pfad</li>
+            <li>Haupt-Menü als aufklappbares Menü mit den verschiedenen Städten in der jeweiligen Kategorie</li>
+        </ul>
+        
+        <h3>sonstiges:</h3>
+        <ul>
+            <li>Tests</li>
             <li>Smartphone-App</li>
         </ul>
         
