--- a/templates/pages/details_page.html
+++ b/templates/pages/details_page.html
@@ -28,6 +28,6 @@
         <div id="thumbnail">
             {{ page.print_thumbnail }}
         </div>
-        {{ page.text }}
+        {{ page.get_text }}
     {% endautoescape %}
 {% endblock %}
