bugfix: text link below the image links in the overviews refered to a wrong page

--- a/templates/auth/overview_pages.html
+++ b/templates/auth/overview_pages.html
@@ -10,7 +10,7 @@
             </a>
             <ul>
                 <li class="title">
-                    <a href="">
+                    <a href="/pages/category/{{ entry.category.id }}/edit">
                         {{ entry.category }}
                     </a>
                 </li>
