--- a/templates/base.html
+++ b/templates/base.html
@@ -63,7 +63,9 @@
         </header>
         
         <div id="main_content" class="clearfix{% if home %} karte{% endif %}">
-            {% block main_content %} maincontent {% endblock %}
+            {% block main_content %}
+                here comes the main content
+            {% endblock %}
         </div>
     </body>
 </html>
