--- a/templates/impressum.html
+++ b/templates/impressum.html
@@ -1,19 +1,13 @@
-{% extends "base.html" %}
-
-{% load show_tabmenus %}
+{% extends "main_content.html" %}
 
 
-{% block main_content %}
-    {% show_tabmenu_for_infopage 'impressum' %}
-
-    <div id="content">
-        <h3>Verantwortlich im Sinne des Pressegesetzes</h3>
-        <h4>Stefan Bunde</h4>
-        <p>
-            Greenpeace Potsdam<br>
-            Hermann-Elflein-Straße 32<br>
-            14467 Potsdam
-        </p>
-        <p>E-Mail: openecomaps (at) gmail (Punkt) com</p>
-    </div>
+{% block content %}
+    <h3>Verantwortlich im Sinne des Pressegesetzes</h3>
+    <h4>Stefan Bunde</h4>
+    <p>
+        Greenpeace Potsdam<br>
+        Hermann-Elflein-Straße 32<br>
+        14467 Potsdam
+    </p>
+    <p>E-Mail: openecomaps (at) gmail (Punkt) com</p>
 {% endblock %}
