--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
             <p>Your username and password didn't match. Please try again.</p>
         {% endif %}
         
-        <form action="/login" method="post">
+        <form action="/login" method="post" id="login_form">
             {% csrf_token %}
             <table>
                 {{ form.as_table }}
@@ -18,7 +18,7 @@
                         <input type="hidden" name="next" value="{% if next %}{{ next|escape }}{% else %}/overview{% endif %}">
                     </td>
                     <td>
-                        <input type="submit" value="login">
+                        <input type="submit" name="login" value="login">
                     </td>
                 </tr>
             </table>
